Caption content update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   			<!-- Sketch will go here! -->
 			<figcaption>
 				<hr class="toprule">
-				[Put all explanations in here.] [Put all explanations in here.] [Put all explanations in here.] [Put all explanations in here.] [Put all explanations in here.] [Put all explanations in here.] [Put all explanations in here.] [Put all explanations in here.] 
+				You can add a caption for your sketch here (it will also be available in full-window mode). 
 			</figcaption>
 		</figure>
 		<p>
